Fix: Socials on mobile view

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -23,6 +23,8 @@
 }
 *::-webkit-scrollbar {
    display: none;
+   list-style: circle;
+   list-style-image: var(--PrimaryOne);
 }
 
 
